--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,24 @@ next-env.d.ts
 
 # Turbopack
 .next/trace.log
+
+# Logs
+logs
+*.log
+dev-debug.log
+# Dependency directories
+node_modules/
+# Environment variables
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+# OS specific
+
+# Task files
+# tasks.json
+# tasks/ 
