--- a/packages/crud/package.json
+++ b/packages/crud/package.json
@@ -11,7 +11,9 @@
     "supabase:start": "supabase start -x realtime,imgproxy,storage-api,edge-runtime,logflare",
     "supabase:stop": "supabase stop",
     "drizzle": "drizzle-kit",
-    "drizzle:gen": "drizzle-kit generate"
+    "drizzle:gen": "drizzle-kit generate",
+    "test": "vitest",
+    "test:run": "vitest run"
   },
   "keywords": [],
   "author": "",
@@ -24,7 +26,9 @@
   "devDependencies": {
     "@superscale/tsconfig": "workspace:^",
     "@types/node": "catalog:",
+    "dotenv": "catalog:",
     "drizzle-kit": "^0.31.4",
-    "supabase": "2.33.9"
+    "supabase": "2.33.9",
+    "vitest": "catalog:"
   }
 }
