--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -35,3 +35,7 @@ catalog:
   # Code quality (workspace-wide standards)
   prettier: ^3.4.2
   eslint: ^8.56.0
+
+  # Testing (used in packages that need testing)
+  vitest: ^2.1.8
+  dotenv: ^16.4.7
